--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,20 @@
 #feed {
-    width: 300px;
+    width: 376px;
     height: 445px;
     overflow-y: scroll;
     /*overflow: hidden;*/
     /*word-break: break-all;*/
-    /*	text-align: justify;
+    /*  text-align: justify;
     text-align-last: left;*/
 }
 
 .feeds {
-    width: 300px;
+    width: 376px;
     margin: 7px;
 }
 
 .hide {
-    /*display: 	none;*/
+    /*display:  none;*/
 }
 
 #cl1 {
@@ -27,8 +27,8 @@
 }
 
 .head_display {
-    width: 300px;
-    height: 30px;
+    width: 376px;
+    height: 43px;
     color: black;
     background-color: DarkSalmon;
 }
@@ -40,7 +40,7 @@
 }
 
 .news_feed_div {
-    height: 54px width: 300px;
+    height: 54px width: 376px;
     overflow: hidden;
     margin: 4px;
     /*border:solid;*/
@@ -53,17 +53,29 @@
 .news_feed_description_div {
     max-height: 54px;
     overflow: hidden;
+    max-width: 260px;
 }
 
 .news_feed_title_div {
     max-height: 45px;
+    max-width: 260px;
     padding-top: 6px;
     padding-bottom: 6px;
     background-color: white;
     overflow: hidden;
 }
-.news_feed_time_div{
-	padding: 3px;
-	opacity: 0.6;
 
+.news_feed_time_div {
+    padding: 3px;
+    opacity: 0.6;
+}
+
+.news_feed {
+    display: inline-block;
+}
+
+.news_feed_image_div {
+    width: 90px;
+    height: 90px;
+    padding-right: 3px;
 }
