--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     width: 376px;
     height: 445px;
     overflow-y: scroll;
+    overflow-x: hidden;
     /*overflow: hidden;*/
     /*word-break: break-all;*/
     /*  text-align: justify;
@@ -103,7 +104,7 @@
     width: 100px;
     /*position: fixed;*/
     /*z-index: 1000;*/
-  /*  left: 50%;
+    /*  left: 50%;
     top: 50%;
     margin: -25px 0 0 -25px;*/
 }
